Added custom target type

--- a/include/bootstrap/rootfs/deploy.conf
+++ b/include/bootstrap/rootfs/deploy.conf
@@ -3,5 +3,5 @@
 
 NAME="rootfs"
 DESC="Prepare and import RootFS"
-PARAMS="SOURCE_PATH"
+PARAMS="SOURCE_PATH TARGET_PATH"
 EXTENDS="bootstrap/${DISTRIB}"
