Added component extra/pulse, extra/dbus moved to desktop/dbus

--- a/include/desktop/lxde/deploy.conf
+++ b/include/desktop/lxde/deploy.conf
@@ -4,4 +4,4 @@
 NAME="lxde"
 DESC="Lightweight X11 Desktop Environment"
 PARAMS="DISTRIB USER_NAME"
-DEPENDS="desktop extra/dbus"
+DEPENDS="desktop desktop/dbus"
