--- a/include/desktop/mate/deploy.conf
+++ b/include/desktop/mate/deploy.conf
@@ -4,4 +4,4 @@
 NAME="mate"
 DESC="MATE Desktop Environment"
 PARAMS="DISTRIB USER_NAME"
-DEPENDS="desktop extra/dbus"
+DEPENDS="desktop desktop/dbus"
