--- a/include/desktop/xfce/deploy.conf
+++ b/include/desktop/xfce/deploy.conf
@@ -4,4 +4,4 @@
 NAME="xfce"
 DESC="Xfce Desktop Environment"
 PARAMS="DISTRIB USER_NAME"
-DEPENDS="desktop extra/dbus"
+DEPENDS="desktop desktop/dbus"
