Renamed kalilinux to kali

--- a/include/bootstrap/kali/deploy.conf
+++ b/include/bootstrap/kali/deploy.conf
@@ -1,7 +1,7 @@
 # Linux Deploy Component
 # (c) Anton Skshidlevsky <meefik@gmail.com>, GPLv3
 
-NAME="kalilinux"
+NAME="kali"
 DESC="Bootstrap for Kali Linux"
 EXTENDS="bootstrap/debian"
 DEPENDS="bootstrap"
